Add exchange-core workload benchmark and related configurations
- Introduced `XcoreWorkloadRunner` to replay the upstream exchange-core `TestOrdersGenerator` workload.
- Updated `README.md` to include details about the new benchmark and its performance metrics.
- Created `run-xcore-bench.yml` playbook to facilitate running the exchange-core benchmark.
- Added `xcore-load.sh` script for executing the benchmark against the deployed cluster.
- Enhanced `all.yml` with new configuration parameters for the exchange-core workload.
- Implemented `HiccupDetector` to measure client-side pauses during benchmarking.
- Added smoke tests for `XcoreWorkloadRunner` to validate command mapping and funding sizing.
- Updated `build-artifacts.sh` to include the new xcore-bench application distribution.